syntax = "proto3";

package device_service;

option go_package = "github.com/sakalouski-alex/device-service/src/proto-gen;device_service";

service DeviceProviderService {
    rpc ListDevices (GetDeviceListRequest) returns (DeviceListResponse) {}
}

message GetDeviceListRequest {}

message DeviceListResponse {
    repeated Device devices = 1;
}

message Device {
    enum Type {
        MOUSE = 0;
        KEYBOARD = 1;
        OTHER = 2;
    }

    string id = 1;
    Type type = 2;
    string device_path = 3;
    string vendor_id = 4;
    string product_id = 5;
}
